# deploy-helper

./: .editorconfig  Cargo.toml  README.md  deploy.yml  deploy2.yml  generate-out.sh  install.sh  servers.yml
docs/: cli.md  deployment-yaml.md
src/: common.rs  main.rs  utils.rs
test-ymls/: always-tag.yml.out  become-invalid-method-error.yml.out  become-nopasswd.yml.out  become-su-nopasswd.yml.out  become-su-with-password.yml  become-su-with-password.yml.out  copy-content-basic.yml  copy-content-basic.yml.out  copy-content-preserves-whitespace.yml  copy-content-preserves-whitespace.yml.out  copy-missing-src-error.yml  copy-missing-src-error.yml.out  copy-neither-src-nor-content-error.yml  copy-with-src.src  copy-with-src.yml  debug-should-come-before-command-and-shell.yml  debug-should-come-before-command-and-shell.yml.out  dont-run-2nd-task-or-2nd-deploy-if-1st-fails.yml  dont-run-2nd-task-or-2nd-deploy-if-1st-fails.yml.out  extra-vars-multi-e.vars1.yml  extra-vars.yml  include-tasks.yml.out  invalid-json-error.yml  invalid-json-error.yml.out  loop-item.yml  missing-var-error.yml  multiline-command-in-shell.yml  multiline-command-in-shell.yml.out  nested-json-parsing-missing-property-error.yml  nested-json-parsing.yml  nested-json-parsing.yml.out  never-tag.yml.out  run-level-vars.yml.out  set-and-use-vars-immediately-in-shell-and-command.yml  set-and-use-vars-immediately-in-shell-and-command.yml.out  setting-and-debugging-vars.yml  setting-and-debugging-vars.yml.out  setting-global-working-directory-before-running-commands.yml  (+26 more)
tests/: Dockerfile  (+1 more)
(+115 files in other folders)
