[package]
name = "deploy-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ssh2 = "0.9.4"
colored = "2.0"
minijinja = "2.4.0"
serde_json = "1.0.132"
shell-words = "1.1.0"
openssl = { version = "0.10", features = ["vendored"] }
indexmap = { version = "2.6.0", features = ["serde"] }
simple-expand-tilde = "0.4.4"
